# monty

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Makefile  plan-todo.md  pyproject.toml
.claude/: settings.json
.claude/skills/coverage/: SKILL.md
.github/workflows/: ci.yml  init-npm-packages.yml
crates/fuzz/: Cargo.toml
crates/fuzz/fuzz_targets/: string_input_panic.rs  tokens_input_panic.rs
crates/monty-cli/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-js/: build.rs  package-lock.json  package.json
crates/monty-js/src/: convert.rs  monty_cls.rs
crates/monty-python/src/: convert.rs  exceptions.rs  monty_cls.rs
crates/monty-python/tests/: test_print.py
crates/monty-type-checking/src/: db.rs
crates/monty/src/: args.rs  callable.rs  error.rs  evaluate.rs  exception.rs  exception_private.rs  exception_public.rs  fstring.rs  function.rs  heap.rs  io.rs  lib.rs  namespace.rs  parse.rs  prepare.rs  resource.rs  run.rs  run_frame.rs  snapshot.rs  value.rs
crates/monty/src/builtins/: abs.rs  all.rs  bin.rs  chr.rs  divmod.rs  enumerate.rs  hash.rs  hex.rs  isinstance.rs  len.rs  min_max.rs  next.rs  oct.rs  ord.rs  pow.rs  print.rs  repr.rs  round.rs  sorted.rs  type_.rs  zip.rs
crates/monty/src/bytecode/: compiler.rs  op.rs
crates/monty/src/bytecode/vm/: binary.rs  call.rs  mod.rs  scheduler.rs
crates/monty/src/modules/: asyncio.rs
crates/monty/src/types/: bytes.rs  dataclass.rs  iter.rs  list.rs  long_int.rs  module.rs  path.rs  py_trait.rs  range.rs  slice.rs  str.rs  tuple.rs  type.rs
crates/monty/test_cases/: dataclass__basic.py  ext_call__arg_side_effect_bug.py  ext_call__augmented.py  ext_call__augmented_refcount_bug.py  ext_call__boolean.py  ext_call__boolean_side_effect_hang.py  ext_call__closure_bug.py  ext_call__comparison.py  ext_call__deep_call_stack.py  ext_call__exc_deep_stack.py  ext_call__exc_in_function.py  ext_call__exc_nested_functions.py  ext_call__fstring.py  ext_call__if_condition.py  ext_call__in_closure.py  ext_call__in_function.py  ext_call__in_function_simple.py  ext_call__literals.py  ext_call__multi_in_func.py  ext_call__nested_calls.py  ext_call__recursion_bug.py  ext_call__return.py  ext_call__side_effects.py  ext_call__subscript.py  ext_call__ternary.py  ext_call__unary.py  function__return_none.py
crates/monty/tests/: datatest_runner.rs  inputs.rs  parse_errors.rs  resource_limits.rs
scripts/: iter_test_methods.py  run_traceback.py
src/: bin.rs  evaluate.rs  exceptions.rs  expressions.rs  lib.rs  literal.rs  main.rs  object.rs  object_types.rs  parse.rs  prepare.rs  run.rs  types.rs
test_cases/: if_else_expr__all.py
