[workspace]
resolver = "2"
members = [
    "crates/monty",
    "crates/monty-cli",
    "crates/monty-python",
    "crates/monty-js",
    "crates/monty-type-checking",
    "crates/monty-typeshed",
    "crates/fuzz"
]
default-members = ["crates/monty-cli"]

[workspace.package]
edition = "2024"
version = "0.0.4"
rust-version = "1.90"
license = "MIT"
authors = ["Samuel Colvin <samuel@pydantic.dev>"]
description = "A sandboxed, snapshotable Python interpreter written in Rust."
categories = ["compilers", "emulators", "development-tools"]
keywords = ["python", "interpreter", "sandbox", "embedded"]
homepage = "https://github.com/pydantic/monty/"
repository = "https://github.com/pydantic/monty/"
documentation = "https://github.com/pydantic/monty/"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false

[workspace.dependencies]
# ruff, ty and related crates
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_parser", tag = "0.15.0" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_ast", tag = "0.15.0" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_text_size", tag = "0.15.0" }
ruff_db = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_db", tag = "0.15.0", features = ["serde"] }
ty_python_semantic = { git = "https://github.com/astral-sh/ruff.git", package = "ty_python_semantic", tag = "0.15.0" }
ty_module_resolver = { git = "https://github.com/astral-sh/ruff.git", package = "ty_module_resolver", tag = "0.15.0" }
ty_vendored = { git = "https://github.com/astral-sh/ruff.git", package = "ty_vendored", tag = "0.15.0" }
# salsa version matches current main of ruff
salsa = { git = "https://github.com/salsa-rs/salsa.git", rev = "e9b9ddd4bec50ac777e9353bbb8f1180e5669d89", default-features = false, features = [
    "compact_str",
    "macros",
    "salsa_unstable",
    "inventory",
] }
# bigint and related crates
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
# others
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }
pretty_assertions = "1.4"

[workspace.lints.rust]
# codspeed cfg is set by codspeed-criterion-compat when running in CodSpeed environment
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(codspeed)'] }

[workspace.lints.clippy]
dbg_macro = "warn"
use_self = "warn"
allow_attributes = "warn"
undocumented_unsafe_blocks = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
