[package]
name = "monty-cli"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "monty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
monty = { path = "../monty" }
monty_type_checking = { path = "../monty-type-checking" }
rustyline = "15"

[lints]
workspace = true
